Fixing background alignment (#2)
* Fixing background color without using sidenav container

* Fixing background alignment

* Fixing development api endpoint

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,12 @@
 .page-container {
+    min-height: 100%;
     height: 100%;
+    padding-top: 80px;
+    padding-bottom: 200px;
+}
+
+.app-container {
+    min-height: 100%;
 }
 
 .page-content-large {
@@ -10,12 +17,4 @@
 .page-content-small {
     margin-left: 5%;
     margin-right: 5%;
-}
-
-mat-sidenav-content {
-    padding-top: 80px;
-}
-
-.router-container {
-    margin-bottom: 10%;
 }
